--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,13 @@
 body {
     background: snow;
 }
+.border-booking {
+	border-radius: 25px;
+	border: 2px solid #0d7bc4;
+	padding: 20px; 
+	width: 110px;
+	height: 80px;
+}
 
 #header {
     padding: 20px;
